partners and servises

--- a/index.html
+++ b/index.html
@@ -569,13 +569,26 @@
         .highlight {
           font-size: 0.8em;
         }
+        .imgDisplay {
+            position: absolute;
+            height: 600px;
+        }
+        .special-text {
+            bottom: 78%;
+        }
+        .arrow {
+            top: 17%;
+        }
+        .content {
+            margin-top: 600px;
+        }
         }
        /* Core Values Container */
       .switching-container {
           position: relative;
-          width: 400px;
+          width: 600px;
           overflow: hidden;
-          height: 650px; /* Fixed height to ensure uniform appearance */
+          height: 850px; /* Fixed height to ensure uniform appearance */
           display: flex;
           align-items: center; /* Center vertically */
           justify-content: center; /* Center horizontally */
@@ -610,15 +623,15 @@
 
       /* Value Name */
       .valuename {
-          font-size: 2em;
+          font-size: 3.5em;
           color: #004d99;
           margin-bottom: 15px;
       }
 
       /* Value Image */
       .valueimg img {
-          width: 300px;
-          height: 260px;
+          width: 400px;
+          height: 300px;
           max-width: 300px;
           margin-bottom: 15px;
           border-radius: 10px;
@@ -626,7 +639,7 @@
 
       /* Value Description */
       .valuedisc {
-          font-size: 1.3em;
+          font-size: 2em;
           color: #666;
           line-height: 1.6;
       }
@@ -644,8 +657,8 @@
 
       /* Navigation Buttons */
       .nav-arrows button {
-          width: 50px;
-          height: 50px;
+          width: 100px;
+          height: 100px;
           display: flex;
           position: relative;
           bottom: 280px;
@@ -655,7 +668,7 @@
           border: none;
           border-radius: 50%;
           color: rgb(214, 107, 0);
-          font-size: 1.5em;
+          font-size: 100px;
           padding-bottom: 25px;
           padding: 17px 15px 15px 15px;
           cursor: url(pointer.png), auto;
@@ -785,8 +798,8 @@
         </div>
         <!-- Navigation Arrows -->
         <div class="nav-arrows">
-            <button id="prev-arrow" style="left: 200px;">←</button>
-            <button id="next-arrow" style="right: 200px;">→</button>
+            <button id="prev-arrow" style="left: 10px; bottom: 450px;"><</button>
+            <button id="next-arrow" style="right: 10px; bottom: 450px;">></button>
         </div>
     </section>    
       
@@ -809,7 +822,7 @@
                   <a href="https://maps.app.goo.gl/yET9U19aXqi8xQAh9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
 
                   <h2>Phone</h2>
-                  <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201143250666">+201143250666</a></p>
+                  <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201064649914">+201064649914</a></p>
 
                   <h2>Tel</h2>
                   <a href="tel:+233779974">+233779974</a>
