--- a/servises.html
+++ b/servises.html
@@ -18,6 +18,7 @@
       background: linear-gradient(to right, #f4f4f4, #e0e0e0);
       color: #333;
       overflow-x: hidden;
+      cursor: url(cursor.png), auto;
     }
 
     /* Header Section */
@@ -79,7 +80,7 @@
       position: relative;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
       overflow: hidden;
-      cursor: pointer;
+      cursor: url(pointer.png), auto;
       transform: scale(1);
       transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
@@ -260,7 +261,7 @@
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
-        <img src="images/Plumbing.jpg" alt="Plumbing">
+        <img src="images/plumbing.jpg" alt="Plumbing">
         <div class="content">
           <p class="description">Efficient and modern plumbing systems for all structures.</p>
         </div>
