--- a/servises.html
+++ b/servises.html
@@ -233,7 +233,7 @@
   </div>
   <div class="nav-btn-menu">
     <button id="buttoni">•Home</button>
-    <button id="buttoniiiii">•Partners</button>
+    <button id="buttoniiiii">•Clients</button>
     <button id="buttoniiii">•Projects</button>
     <button id="buttonii">•About-us</button>
     <button id="buttoniiiiii">•Contact-us</button>
