--- a/index.html
+++ b/index.html
@@ -699,14 +699,14 @@
       <button id="buttoniiiii">•Services</button>
       <button id="buttoniiii">•Projects</button>
       <button id="buttonii">•About-us</button>
-      <button id="buttoniii">•partners</button>
+      <button id="buttoniii">•Clients</button>
       <button id="buttoniiiiii">•Contact-us</button>
   </div>
     <header>
       <div class="left-buttons">
         <button id="buttonzero">Home</button>
         <button id="buttonone">About Us</button>
-        <button id="buttontwo">Partners</button>
+        <button id="buttontwo">Clients</button>
       </div>
       <div class="right-buttons">
         <button id="buttonthree">Projects</button>
