--- a/servises.html
+++ b/servises.html
@@ -256,7 +256,7 @@
         <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
           <span>(Chilled water, VRF, and DX)</span>
-          <p class="description">Advanced cooling solutions for residential and commercial spaces.</p>
+          <p class="description">Advanced Air Conditioning solutions for residential and commercial spaces.</p>
         </div>
       </div>
       <div class="service-item">
