--- a/partners.html
+++ b/partners.html
@@ -202,7 +202,7 @@
 
   <!-- Partners Section -->
   <div class="partners-container">
-    <p class="key-clients">Key <span style="color: darkblue;">Partners</span></p>
+    <p class="key-clients">Key <span style="color: darkblue;">Clients</span></p>
     <!-- Partner Items -->
     <div class="project-item">
       <img src="images/partner1.png" alt="Partner 1" />
