--- a/partners.html
+++ b/partners.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Partners</title>
+  <title>Clients</title>
   <link rel="icon" href="logo.png" type="image/x-icon">
   <style>
     /* Reset and Body Styling */
