--- a/servises.html
+++ b/servises.html
@@ -261,7 +261,7 @@
       </div>
       <div class="service-item">
         <div class="title">Plumbing</div>
-        <img src="images/plumbing.jpg" alt="Plumbing">
+        <img src="images/Plumbing.jpg" alt="Plumbing">
         <div class="content">
           <p class="description">Efficient and modern plumbing systems for all structures.</p>
         </div>
@@ -313,7 +313,7 @@
         <div class="title">Swimming Pools</div>
         <img src="images/swimming-pools.jpg" alt="Swimming Pools">
         <div class="content">
-          <p class="description">Custom-designed swimming pools for homes and resorts.</p>
+          <p class="description">Top Tier swimming pool service for homes and resorts.</p>
         </div>
       </div>
       <div class="service-item">
