--- a/servises.html
+++ b/servises.html
@@ -18,6 +18,7 @@
       background: linear-gradient(to right, #f4f4f4, #e0e0e0);
       color: #333;
       overflow-x: hidden;
+      cursor: url(cursor.png), auto;
     }
 
     /* Header Section */
@@ -79,7 +80,7 @@
       position: relative;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
       overflow: hidden;
-      cursor: pointer;
+      cursor: url(pointer.png), auto;
       transform: scale(1);
       transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
@@ -232,7 +233,7 @@
   </div>
   <div class="nav-btn-menu">
     <button id="buttoni">•Home</button>
-    <button id="buttoniiiii">•Partners</button>
+    <button id="buttoniiiii">•Clients</button>
     <button id="buttoniiii">•Projects</button>
     <button id="buttonii">•About-us</button>
     <button id="buttoniiiiii">•Contact-us</button>
@@ -255,7 +256,7 @@
         <img src="images/air-conditioning.jpg" alt="Air Conditioning">
         <div class="content">
           <span>(Chilled water, VRF, and DX)</span>
-          <p class="description">Advanced cooling solutions for residential and commercial spaces.</p>
+          <p class="description">Advanced Air Conditioning solutions for residential and commercial spaces.</p>
         </div>
       </div>
       <div class="service-item">
@@ -312,7 +313,7 @@
         <div class="title">Swimming Pools</div>
         <img src="images/swimming-pools.jpg" alt="Swimming Pools">
         <div class="content">
-          <p class="description">Custom-designed swimming pools for homes and resorts.</p>
+          <p class="description">Top Tier swimming pool service for homes and resorts.</p>
         </div>
       </div>
       <div class="service-item">
