--- a/projects.html
+++ b/projects.html
@@ -7,114 +7,193 @@
     <link rel="icon" href="logo.png" type="image/x-icon">
     <style>
       body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background: linear-gradient(135deg, #1e3c72, #2a5298);
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        overflow: hidden;
+        cursor: url(cursor.png), auto;
       }
-
-      .container {
-        position: relative;
-        width: 800px;
-        height: 800px;
-      }
-
-      .center-text {
+      .projectsimg {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 50px;
-        color: #ffffff;
-        font-weight: 700;
-        text-transform: uppercase;
-        letter-spacing: 6px;
-        text-align: center;
-        animation: textEffect 3s infinite alternate ease-in-out;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh; /* Full screen height */
+        background-size: cover;
+        background-position: center;
+        z-index: 1;
       }
-
-      @keyframes textEffect {
-        0% {
-          color: #ffffff;
-          text-shadow: 0 0 10px #ff8c00, 0 0 20px #ff8c00, 0 0 30px #ff8c00;
-        }
-        100% {
-          color: #ff8c00;
-          text-shadow: 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ffffff;
-        }
+      .content {
+        margin-top: 100vh;
       }
-
-      .hex-button {
-        position: absolute;
-        width: 140px;
-        height: 160px;
-        background-color: #ffffff;
-        clip-path: polygon(
-          50% 0%,
-          100% 25%,
-          100% 75%,
-          50% 100%,
-          0% 75%,
-          0% 25%
-        );
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.2em;
+      header {
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+        backdrop-filter: blur(10px); /* Blur effect for a modern look */
         color: #333;
-        transition: transform 0.3s ease, background-color 0.3s ease,
-          box-shadow 0.3s ease, width 0.7s, height 0.7s;
-        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 20px; /* Adjust padding */
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 50px;
+        z-index: 500;
       }
+      header img {
+        height: 50px;
+      }
+      /* Hamburger Menu */
+      .nav-menu {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            height: 50px;
+            width: 50px;
+            border-radius: 10px;
+            z-index: 900;
+            cursor: url("pointer.png"), auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .openmenu {
+          z-index: 900;
+        }
 
-      .hex-button:hover {
-        width: 200px;
-        height: 220px;
-        background-color: #f39c12;
-        color: #fff;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-      }
+        .nav-menu div {
+            width: 40px;
+            height: 40px;
+            margin: 2px;
+            position: fixed;
+            z-index: 900;
+        }
+        .nav-menu span {
+            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
+            width: 80%;
+            height: 4px;
+            border-radius: 5px;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: transform 0.5s, width 0.5s;
+        }
 
-      /* Positioning the hex buttons around the center text */
-      .hex1 {
-        top: 10%;
-        left: 50%;
-        transform: translate(-50%, 0);
-      }
-      .hex2 {
-        top: 25%;
-        right: 20%;
-        transform: translate(50%, 0);
-      }
-      .hex3 {
-        bottom: 25%;
-        right: 20%;
-        transform: translate(50%, 0);
-      }
-      .hex4 {
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%, 0);
-      }
-      .hex5 {
-        bottom: 25%;
-        left: 20%;
-        transform: translate(-50%, 0);
-      }
-      .hex6 {
-        top: 25%;
-        left: 20%;
-        transform: translate(-50%, 0);
-      }
+        .openmenu {
+          z-index: 900;
+        }
+        .nav-menu .line1 {
+            transform: translate(-50%, -12px);
+            z-index: 900;
+        }
+        .nav-menu .line3 {
+            transform: translate(-50%, 8px);
+            z-index: 900;
+        }
+        .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+        }
+        .openmenu .line3 {
+            transform: translate(-50%, -50%) rotate(45deg);
+            z-index: 900;
+        }
+        .openmenu .line2 {
+            width: 0;
+            z-index: 900;
+        }
+
+        /* Menu Styling */
+        .nav-btn-menu {
+            background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent */
+            width: 40%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            justify-content: center;
+            position: fixed;
+            z-index: 800;
+            top: 0;
+            left: 100%;
+            transition: left 0.5s ease;
+            box-shadow: -4px 0 15px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+        }
+
+        .nav-btn-menu button {
+            padding: 10px 20px;
+            border: none;
+            background: none;
+            color: #333;
+            font-size: 40px;
+            font-weight: 700;
+            font-family: "Roboto", sans-serif;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            transition: color 0.3s, transform 0.3s;
+            cursor: url('pointer.png'), auto;
+        }
+
+        .nav-btn-menu button:hover {
+            color: #FF8C00;
+            transform: scale(1.1); /* Scale on hover */
+        }
+
+        .trans-nav-btn-menu {
+            left: 60%;
+        }
+        @media (max-width: 1050px) {
+          .projectsimg {
+            position: absolute;
+            height: auto;
+            margin-top: 60px;
+        }
+        }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="center-text">In progress</div>
+    <header><img src="logoname.png"></header>
+    <div class="nav-menu">
+      <div>
+          <span class="line1"></span>
+          <span class="line2"></span>
+          <span class="line3"></span>
+      </div>
+  </div>
+  <div class="nav-btn-menu">
+      <button id="buttoni">•Home</button>
+      <button id="buttoniiiii">•Services</button>
+      <button id="buttonii">•About-us</button>
+      <button id="buttoniii">•Clients</button>
+      <button id="buttoniiiiii">•Contact-us</button>
+  </div>
+    <img src="projects.png" class="projectsimg">
+    <div class="content">
+      <div class="projectsectionone"><img src=""></div>
     </div>
+    <script>
+      // Navigation Menu Toggle
+      let menu = document.querySelector('.nav-menu');
+      let menuBtn = document.querySelector('.nav-btn-menu');
+
+      menu.addEventListener('click', () => {
+          menu.classList.toggle('openmenu');
+          menuBtn.classList.toggle('trans-nav-btn-menu');
+      });
+      document.getElementById("buttoniii").addEventListener("click", function () {
+            window.location.href = "partners.html";
+        });
+        document.getElementById("buttoni").addEventListener("click", function () {
+            window.location.href = "index.html";
+        });
+        document.getElementById("buttoniiiii").addEventListener("click", function () {
+            window.location.href = "servises.html";
+        });
+        document.getElementById("buttonii").addEventListener("click", function () {
+            window.location.href = "index.html#content";
+        });
+
+        document.getElementById("buttoniiiiii").addEventListener("click", function () {
+            window.location.href = "index.html#final";
+        });
+    </script>
   </body>
 </html>
