--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,7 @@
         background-size: cover;
         background-position: center;
         z-index: 1;
-      }
-      .content {
-        margin-top: 100vh;
+        border-bottom: solid rgba(0, 0, 0, 0.342);
       }
       header {
         width: 100%;
@@ -140,11 +138,63 @@
         .trans-nav-btn-menu {
             left: 60%;
         }
+        
+        .projectsection {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          gap: 100px;
+          margin-top: 80px;
+        }
+        .content {
+          margin-top: 700px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+        .projects {
+          width: 500px;
+          height: 500px;
+          border: solid rgba(0, 0, 0, 0.1);
+          border-radius: 40px;
+        }
+        .projects img{
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+          border-radius: 40px;
+        }
+        .projects p {
+          position: relative;
+          z-index: 400;
+          background-color: white;
+          border-radius: 40px;
+          width: 100%;
+          height: 80px;
+          bottom: 153px;
+          padding-top: 35px;
+          text-align: center;
+          font-family: Arial, Helvetica, sans-serif;
+          font-weight: 900;
+          font-size: 30px;
+          border: solid rgba(0, 0, 0, 0.1);
+        }
         @media (max-width: 1050px) {
           .projectsimg {
             position: absolute;
             height: auto;
             margin-top: 60px;
+        }
+        .projectsection {
+          flex-direction: column;
+        }
+        .projects {
+          width: 400px;
+          height: 400px;
+        }
+        .content {
+          margin-top: 340px;
         }
         }
     </style>
@@ -167,7 +217,38 @@
   </div>
     <img src="projects.png" class="projectsimg">
     <div class="content">
-      <div class="projectsectionone"><img src=""></div>
+      <div class="projectsection">
+        <div class="projects">
+          <img src="bg2.png">
+          <p>Commercial Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro2.jpg">
+          <p>Health Care</p>
+        </div>
+      </div>
+      <div class="projectsection">
+        <div class="projects">
+          <img src="pro3.jpg">
+          <p>Admin Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro4.jpg">
+          <p>Pharmaceutical Factories</p>
+        </div>
+      </div>
+      <div class="projectsection">
+        <div class="projects">
+          <img src="bg10.png">
+          <p>Residential Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro6.jpg">
+          <p>Educational Buildings</p>
+        </div>
+      </div>
+      <div class="projectsectiontwo"></div>
+      <div class="projectsectionthree"></div>
     </div>
     <script>
       // Navigation Menu Toggle
