--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,8 @@
           border-radius: 40px;
           width: 100%;
           height: 80px;
-          bottom: 153px;
+          bottom: 150px;
+          right: 2px;
           padding-top: 35px;
           text-align: center;
           font-family: Arial, Helvetica, sans-serif;
