--- a/projects.html
+++ b/projects.html
@@ -138,62 +138,37 @@
         .trans-nav-btn-menu {
             left: 60%;
         }
-        
-        .projectsection {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          gap: 100px;
-          margin-top: 80px;
-        }
         .content {
           margin-top: 700px;
+          width: 100%;
           display: flex;
           flex-direction: column;
-          justify-content: center;
           align-items: center;
+          gap: 200px;
         }
         .projects {
-          width: 500px;
-          height: 500px;
-          border: solid rgba(0, 0, 0, 0.1);
-          border-radius: 40px;
+          width: 100%;
+          max-height: 621px;
+          margin-top: 100px;
         }
         .projects img{
           width: 100%;
-          height: 100%;
+          border-radius: 100px;
+          border-top: solid rgba(0, 0, 0, 0.1);
+          border-bottom: solid rgba(0, 0, 0, 0.1);
           object-fit: fill;
-          border-radius: 40px;
         }
         .projects p {
           position: relative;
           z-index: 400;
-          background-color: white;
-          border-radius: 40px;
-          width: 100%;
-          height: 80px;
-          bottom: 150px;
-          right: 2px;
-          padding-top: 35px;
-          text-align: center;
+          color: white;
           font-family: Arial, Helvetica, sans-serif;
           font-weight: 900;
-          font-size: 30px;
-          border: solid rgba(0, 0, 0, 0.1);
+          font-size: 80px;
+          text-align: center;
+          bottom: 500px;
         }
         @media (max-width: 1050px) {
-          .projectsimg {
-            position: absolute;
-            height: auto;
-            margin-top: 60px;
-        }
-        .projectsection {
-          flex-direction: column;
-        }
-        .projects {
-          width: 400px;
-          height: 400px;
-        }
         .content {
           margin-top: 340px;
         }
@@ -218,7 +193,6 @@
   </div>
     <img src="projects.png" class="projectsimg">
     <div class="content">
-      <div class="projectsection">
         <div class="projects">
           <img src="bg2.png">
           <p>Commercial Buildings</p>
@@ -227,8 +201,6 @@
           <img src="pro2.jpg">
           <p>Health Care</p>
         </div>
-      </div>
-      <div class="projectsection">
         <div class="projects">
           <img src="pro3.jpg">
           <p>Admin Buildings</p>
@@ -237,8 +209,6 @@
           <img src="pro4.jpg">
           <p>Pharmaceutical Factories</p>
         </div>
-      </div>
-      <div class="projectsection">
         <div class="projects">
           <img src="bg10.png">
           <p>Residential Buildings</p>
@@ -247,7 +217,6 @@
           <img src="pro6.jpg">
           <p>Educational Buildings</p>
         </div>
-      </div>
       <div class="projectsectiontwo"></div>
       <div class="projectsectionthree"></div>
     </div>
