--- a/projects.html
+++ b/projects.html
@@ -169,6 +169,10 @@
           bottom: 500px;
         }
         @media (max-width: 1050px) {
+          .projectsimg {
+            position: absolute;
+            height: auto;
+        }
         .content {
           margin-top: 340px;
         }
