--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,7 @@
         background-size: cover;
         background-position: center;
         z-index: 1;
-      }
-      .content {
-        margin-top: 100vh;
+        border-bottom: solid rgba(0, 0, 0, 0.342);
       }
       header {
         width: 100%;
@@ -140,11 +138,46 @@
         .trans-nav-btn-menu {
             left: 60%;
         }
+        .content {
+          margin-top: 700px;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 200px;
+        }
+        .projects {
+          width: 100%;
+          max-height: 621px;
+          margin-top: 100px;
+        }
+        .projects img{
+          width: 100%;
+          border-radius: 100px;
+          border-top: solid rgba(0, 0, 0, 0.1);
+          border-bottom: solid rgba(0, 0, 0, 0.1);
+          object-fit: fill;
+        }
+        .projects p {
+          position: relative;
+          z-index: 400;
+          color: white;
+          font-family: Arial, Helvetica, sans-serif;
+          font-weight: 900;
+          font-size: 80px;
+          text-align: center;
+          bottom: 500px;
+        }
         @media (max-width: 1050px) {
           .projectsimg {
             position: absolute;
             height: auto;
-            margin-top: 60px;
+        }
+        .content {
+          margin-top: 340px;
+        }
+        .projects p {
+          bottom: 400px;
         }
         }
     </style>
@@ -167,7 +200,32 @@
   </div>
     <img src="projects.png" class="projectsimg">
     <div class="content">
-      <div class="projectsectionone"><img src=""></div>
+        <div class="projects">
+          <img src="bg2.png">
+          <p>Commercial Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro2.jpg">
+          <p>Health Care</p>
+        </div>
+        <div class="projects">
+          <img src="pro3.jpg">
+          <p>Admin Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro4.jpg">
+          <p>Pharmaceutical Factories</p>
+        </div>
+        <div class="projects">
+          <img src="bg10.png">
+          <p>Residential Buildings</p>
+        </div>
+        <div class="projects">
+          <img src="pro6.jpg">
+          <p>Educational Buildings</p>
+        </div>
+      <div class="projectsectiontwo"></div>
+      <div class="projectsectionthree"></div>
     </div>
     <script>
       // Navigation Menu Toggle
