--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,20 @@
       cursor: url(cursor.png), auto;
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #ffffff; /* Dark background for contrast */
-      color: #fff;
-      text-align: center;
+      background-color: #ffffff;
+      color: #333;
     }
+
+    .projectsimg {
+        position: relative;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        z-index: 1;
+        border-bottom: solid rgba(0, 0, 0, 0.342);
+      }
 
     /* Header Styling */
     header {
@@ -37,8 +47,8 @@
       height: 40px;
     }
 
-    /* Hamburger Menu */
-    .nav-menu {
+     /* Hamburger Menu */
+     .nav-menu {
             position: fixed;
             top: 10px;
             right: 10px;
@@ -138,38 +148,21 @@
             left: 60%;
         }
 
-    /* Projects Background Image Styling */
-    .projectsimg {
-      width: 100%;
-      height: 100vh;
-      background-size: cover;
-      background-position: center;
-      z-index: 1;
-    }
-
-    @media (max-width: 1050px) {
-      .projectsimg {
-        position: absolute;
-        height: auto;
-      }
-    }
-
-    /* Projects Section Styling */
+    /* Projects Section */
     .content {
-      margin-top: 80px; /* Offset for header */
+      padding: 20px;
+      margin-top: 200px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
-      padding: 20px;
+      gap: 100px;
     }
 
     .projects {
       width: 80%;
       position: relative;
-      border-radius: 10px;
+      border-radius: 100px;
       overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .projects img {
@@ -183,59 +176,62 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: 2.5rem; /* Large font size */
+      font-size: 3rem;
       font-weight: bold;
-      font-family: 'Roboto', sans-serif; /* Modern font */
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Subtle shadow for better contrast */
-      margin: 0;
       color: white;
-      white-space: nowrap; /* Prevent text wrapping */
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+      margin: 0;
+      white-space: nowrap;
     }
 
     /* Responsive Design */
     @media (max-width: 768px) {
       header {
-        height: 50px;
-        padding: 5px 10px;
+        padding: 10px;
       }
 
       header img {
         height: 30px;
       }
 
-      .nav-btn-menu button {
-        font-size: 1.2rem;
+      .projects {
+        width: 90%;
       }
 
       .projects p {
-        font-size: 2rem;
+        font-size: 1.2rem;
       }
     }
 
     @media (max-width: 480px) {
       .projects p {
-        font-size: 1.5rem;
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
+  <div class="nav-menu">
+    <div>
+        <span class="line1"></span>
+        <span class="line2"></span>
+        <span class="line3"></span>
+    </div>
+</div>
+<div class="nav-btn-menu">
+    <button id="buttoni">•Home</button>
+    <button id="buttoniiiii">•Services</button>
+    <button id="buttonii">•About-us</button>
+    <button id="buttoniii">•Clients</button>
+    <button id="buttoniiiiii">•Contact-us</button>
+</div>
+
   <header>
     <img src="logoname.png" alt="Logo">
-    <div class="nav-menu" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
   </header>
+  
   <img src="projects.png" class="projectsimg" alt="Projects Background">
-  <div class="nav-btn-menu">
-    <button onclick="location.href='index.html'">Home</button>
-    <button onclick="location.href='services.html'">Services</button>
-    <button onclick="location.href='about.html'">About Us</button>
-    <button onclick="location.href='clients.html'">Clients</button>
-    <button onclick="location.href='contact.html'">Contact Us</button>
-  </div>
+  
   <div class="content">
     <div class="projects">
       <img src="bg2.png" alt="Commercial Buildings">
@@ -254,13 +250,16 @@
       <p>Pharmaceutical Factories</p>
     </div>
   </div>
+  
   <script>
-    function toggleMenu() {
-      const menu = document.querySelector('.nav-menu');
-      const navMenu = document.querySelector('.nav-btn-menu');
-      menu.classList.toggle('open');
-      navMenu.classList.toggle('open');
-    }
+    // Navigation Menu Toggle
+    let menu = document.querySelector('.nav-menu');
+      let menuBtn = document.querySelector('.nav-btn-menu');
+
+      menu.addEventListener('click', () => {
+          menu.classList.toggle('openmenu');
+          menuBtn.classList.toggle('trans-nav-btn-menu');
+      });
   </script>
 </body>
 </html>
