--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
     .projects {
       width: 80%;
       position: relative;
-      border-radius: 100px;
+      border-radius: 15%;
       overflow: hidden;
     }
 
@@ -199,13 +199,16 @@
       }
 
       .projects p {
-        font-size: 1.2rem;
+        font-size: 2.5rem;
+      }
+      .content {
+        margin-top: 100px;
       }
     }
 
     @media (max-width: 480px) {
       .projects p {
-        font-size: 1rem;
+        font-size: 2rem;
       }
     }
   </style>
@@ -234,20 +237,28 @@
   
   <div class="content">
     <div class="projects">
-      <img src="bg2.png" alt="Commercial Buildings">
+      <img src="bg2.png">
       <p>Commercial Buildings</p>
     </div>
     <div class="projects">
-      <img src="pro2.jpg" alt="Health Care">
+      <img src="pro2.jpg">
       <p>Health Care</p>
     </div>
     <div class="projects">
-      <img src="pro3.jpg" alt="Admin Buildings">
+      <img src="pro3.jpg">
       <p>Admin Buildings</p>
     </div>
     <div class="projects">
-      <img src="pro4.jpg" alt="Pharmaceutical Factories">
+      <img src="pro4.jpg">
       <p>Pharmaceutical Factories</p>
+    </div>
+    <div class="projects">
+      <img src="bg10.png">
+      <p>Residential Buildings</p>
+    </div>
+    <div class="projects">
+      <img src="pro6.jpg">
+      <p>Educational Buildings</p>
     </div>
   </div>
   
