--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white; /* Set a background color */
+        background-color: #fbfbfb; /* Set a background color */
       }
 
       .loading-screen img {
-        width: 500px; /* Adjust size of preloader image */
+        width: 100px; /* Adjust size of preloader image */
       }
 
       .hidden {
