--- a/index.html
+++ b/index.html
@@ -583,6 +583,9 @@
         .content {
             margin-top: 600px;
         }
+        .loading-screen img {
+            width: 200px; /* Adjust size of preloader image */
+        }
         }
        /* Core Values Container */
       .switching-container {
