--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         .text-content p {
             line-height: 15px;
             display: inline;
-            font-size: 1.7em;
+            font-size: 1.5em;
             color: #666;
             line-height: 1.6;
             opacity: 0;
@@ -752,7 +752,18 @@
         </div>
     </section>
 
-      
+      <!-- Section 2 -->
+      <section class="hover-content" id="content2">
+        <div class="text-content">
+          <h1>OUR<br> 
+            <span class="highlightone">VISION</span></h1>
+            <p>"To be the first choice for all our  current and future clients by delivering high-quality projects and innovative engineering <br>solutions that adds value to our clients and exceed their expectations, while contributing to community development."</p>
+        </div>
+        <div class="image-content">
+            <img src="culture.jpeg" alt="Summit TECS Values Image">
+        </div>
+    </section>
+    
       <!-- Section 3 -->
       <section class="hover-content" id="content4">
           <div class="text-content">
