--- a/pro1.html
+++ b/pro1.html
@@ -137,15 +137,85 @@
             left: 60%;
         }
 
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      header {
-        padding: 10px;
-      }
+    /* Projects Section */
+    .content {
+      padding: 20px;
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 50px;
+    }
 
-      header img {
-        height: 30px;
-      }
+    .projects {
+      width: 80%;
+      max-width: 800px;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    .carousel {
+      position: relative;
+      width: 100%;
+      height: 400px;
+    }
+
+    .carousel img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      border-radius: 15px;
+    }
+
+    .carousel img.active {
+      opacity: 1;
+    }
+
+    .dots {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+    }
+
+    .dots button {
+      width: 12px;
+      height: 12px;
+      border: none;
+      border-radius: 50%;
+      background-color: #ccc;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .dots button.active {
+      background-color: #333;
+    }
+
+    .carousel-content {
+      text-align: center;
+      padding: 15px 20px;
+    }
+
+    .carousel-content h3 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .carousel-content p {
+      margin: 5px 0 0;
+      font-size: 16px;
+      color: #666;
     }
   </style>
 </head>
@@ -160,6 +230,7 @@
 <div class="nav-btn-menu">
     <button id="buttoni">•Home</button>
     <button id="buttoniiiii">•Services</button>
+    <button id="buttoniii">•Projects</button>
     <button id="buttonii">•About-us</button>
     <button id="buttoniiii">•Clients</button>
     <button id="buttoniiiiii">•Contact-us</button>
@@ -168,7 +239,81 @@
   <header>
     <img src="logoname.png" alt="Logo">
   </header>
+
+  <div class="content">
+    <!-- First Project -->
+    <div class="projects">
+      <div class="carousel">
+        <img src="images/Picture1.png" class="active" alt="Project Image 1">
+        <img src="images/Picture2.png" alt="Project Image 2">
+        <img src="images/Picture3.png" alt="Project Image 3">
+        <img src="images/Picture4.png" alt="Project Image 4">
+        <img src="images/Picture5.png" alt="Project Image 5">
+        <div class="dots">
+          <button class="active"></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+      </div>
+      <div class="carousel-content">
+        <h3>Volvo Showroom</h3>
+        <p>SCOPE: Design, supply & install Electromechanical works for Mohandseen Branch</p>
+      </div>
+    </div>
+
+    <!-- Second Project -->
+    <div class="projects">
+      <div class="carousel">
+        <img src="images/Picture6.png" class="active" alt="Project Image 6">
+        <img src="images/Picture7.png" alt="Project Image 7">
+        <img src="images/Picture8.png" alt="Project Image 8">
+        <img src="images/Picture9.png" alt="Project Image 9">
+        <div class="dots">
+          <button class="active"></button>
+          <button></button>
+          <button></button>
+          <button></button>
+          <button></button>
+        </div>
+      </div>
+      <div class="carousel-content">
+        <h3>Bitter sweet</h3>
+        <p>SCOPE: Electromechanical works for 4 Branches</p>
+      </div>
+    </div>
+  </div>
+
   <script>
+    const carousels = document.querySelectorAll('.projects');
+
+    carousels.forEach(project => {
+      const images = project.querySelectorAll('.carousel img');
+      const dots = project.querySelectorAll('.dots button');
+      let currentIndex = 0;
+
+      function showImage(index) {
+        images.forEach((img, i) => {
+          img.classList.toggle('active', i === index);
+        });
+        dots.forEach((dot, i) => {
+          dot.classList.toggle('active', i === index);
+        });
+        currentIndex = index;
+      }
+
+      function nextImage() {
+        const nextIndex = (currentIndex + 1) % images.length;
+        showImage(nextIndex);
+      }
+
+      dots.forEach((dot, index) => {
+        dot.addEventListener('click', () => showImage(index));
+      });
+
+      setInterval(nextImage, 2000); // Change image every 2 seconds
+    });
     // Navigation Menu Toggle
     let menu = document.querySelector('.nav-menu');
       let menuBtn = document.querySelector('.nav-btn-menu');
@@ -185,6 +330,9 @@
         });
         document.getElementById("buttoniiiii").addEventListener("click", function () {
             window.location.href = "servises.html";
+        });
+        document.getElementById("buttoniii").addEventListener("click", function () {
+            window.location.href = "projects.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
             window.location.href = "index.html#content";
