--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #fbfbfb; /* Set a background color */
+        background-color: #fbfbfb;
       }
 
       .loading-screen img {
-        width: 100px; /* Adjust size of preloader image */
+        width: 150px; /* Adjust size of preloader image */
       }
 
       .hidden {
@@ -453,6 +453,9 @@
           .right-buttons{
             margin-right: 50px;
           }
+          .loading-screen img{
+            width: 200px;
+          }
         }
         @media (max-width: 1000px) {
           .left-buttons{
@@ -584,9 +587,6 @@
         }
         .content {
             margin-top: 600px;
-        }
-        .loading-screen img {
-            width: 200px; /* Adjust size of preloader image */
         }
         }
        /* Core Values Container */
