--- a/pro1.html
+++ b/pro1.html
@@ -269,11 +269,11 @@
     <!-- First Project -->
     <div class="projects">
       <div class="carousel">
-        <img src="images/Picture1.png" class="active" alt="Project Image 1">
-        <img src="images/Picture2.png" alt="Project Image 2">
-        <img src="images/Picture3.png" alt="Project Image 3">
-        <img src="images/Picture4.png" alt="Project Image 4">
-        <img src="images/Picture5.png" alt="Project Image 5">
+        <img src="images/picture1.png" class="active" alt="Project Image 1">
+        <img src="images/picture2.png" alt="Project Image 2">
+        <img src="images/picture3.png" alt="Project Image 3">
+        <img src="images/picture4.png" alt="Project Image 4">
+        <img src="images/picture5.png" alt="Project Image 5">
         <div class="dots">
           <button class="active"></button>
           <button></button>
@@ -291,10 +291,10 @@
     <!-- Second Project -->
     <div class="projects">
       <div class="carousel">
-        <img src="images/Picture6.png" class="active" alt="Project Image 6">
-        <img src="images/Picture7.png" alt="Project Image 7">
-        <img src="images/Picture8.png" alt="Project Image 8">
-        <img src="images/Picture9.png" alt="Project Image 9">
+        <img src="images/picture6.png" class="active" alt="Project Image 6">
+        <img src="images/picture7.png" alt="Project Image 7">
+        <img src="images/picture8.png" alt="Project Image 8">
+        <img src="images/picture9.png" alt="Project Image 9">
         <div class="dots">
           <button class="active"></button>
           <button></button>
