--- a/pro1.html
+++ b/pro1.html
@@ -314,7 +314,7 @@
       <h3>Almasa cap floor</h3>
       <p>SCOPE: Supply & install HVAC & Mechanical  works  for the Top floor with area 3000 m2</p>
     </div>
-  </div>
+   </div>
 
     <!-- Second Project -->
     <div class="projects">
@@ -334,8 +334,74 @@
         <h3>Bitter sweet</h3>
         <p>SCOPE: Electromechanical works for 4 Branches</p>
       </div>
+  </div>
+  
+
+  <!-- forth Project -->
+  <div class="projects">
+    <div class="carousel">
+      <img src="images/picture23.png" class="active" alt="Project Image 23">
+      <img src="images/picture24.png" alt="Project Image 24">
+      <img src="images/picture25.png" alt="Project Image 25">
+      <img src="images/picture26.png" alt="Project Image 26">
+      <img src="images/picture27.png" alt="Project Image 26">
+      <div class="dots">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+      </div>
+    </div>
+    <div class="carousel-content">
+      <h3>Aspero restaurant</h3>
+      <p>SCOPE: Design, Supply & install Electromechanical works</p>
     </div>
   </div>
+
+
+<!-- fifth Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture28.png" class="active" alt="Project Image 28">
+    <img src="images/picture29.png" alt="Project Image 29">
+    <img src="images/picture30.png" alt="Project Image 30">
+    <img src="images/picture31.png" alt="Project Image 31">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Ellie home</h3>
+    <p>SCOPE: Design, supply & install Electromechanical works for all Branches</p>
+  </div>
+</div>
+<!-- six Project -->
+<div class="projects">
+  <div class="carousel">
+    <img src="images/picture32.png" class="active" alt="Project Image 32">
+    <img src="images/picture33.png" alt="Project Image 33">
+    <img src="images/picture34.png" alt="Project Image 34">
+    <img src="images/picture35.png" alt="Project Image 35">
+    <div class="dots">
+      <button class="active"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+  </div>
+  <div class="carousel-content">
+    <h3>Variegato restaurant</h3>
+    <p>SCOPE: Design, Supply & install Electromechanical works</p>
+  </div>
+</div>
+
+
+
+</div>
 
   <script>
     document.querySelectorAll('.projects').forEach((project) => {
